		* Fix for the check of cryptopp library version in
		  configure.in.
		* Rewrote the cryptopp m4 stuff.
		* Fixed some memory leaks related to the use of
		  CTerminationProcess.
		* Fixed the usage of CryptoPP::Base64Encoder when creating the
		  key pair for ClientCreditsList. cryptopp semantics is to
		  give the ownership, so do not create objects like this on
		  the heap.

	Radek:
		* Patch to fix windows compilation.

	Raziel:
		* Adapt Kad code to the standard coding guidelines.
		* Work on EC API

	spiralvoice:
		* Patch to enable MLDonkey os_info support.

	Skolnick:
		* Added the time to the aMule stats in the wxCas window and
		  in the generated image.
		* Added the time to the aMule stats in the cas output and
		  in the generated image
		* Added option to generate image in JPG format (along with PNG)
		* Added new icon for aMule

	Stu Redman:
		* Fix for Transferred / Completed not updated in remote GUI.
		* Fix for PARTSIZE not beeing 64 bits. Enums are always 32
		  bits, even if we use a 64 bit constant to initialize it.
		* ratings/comment marks are now shown in the main transfer
		  window (the little colored !! on the left).
		* comments are now updated when comment packets arrive (not
		  only when the show comment dialog is open).
		* remote names are now updated once on startup. So there is no
		  more 3s lag until the names are shown when the dialog is
		  opened for the first time.
		* ED2K/Kad User/Filecount is now shown in the remote-gui status
		  bar.
		* Kad users/files also updated on the Kad Tab.
		* Backed out a now obsolete change made in CommentDialogLst.cpp
		  (comments are not related to remote filenames anymore).

	Trevino:
		* Fix for "Both the Unknown client icon and the Unknown status
		icon points to the same file" issue.
		* Skin support with relative paths.

	visualage:
		* Fix for aMuleWeb unicode search/download link error.
		* Fix for aMuleWeb segfault when refreshing too frequently.